<resources>
    <string name="app_name">Labo 4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_generate">Generate</string>
    <string name="menu_delete_all">Delete All</string>
    <string name="menu_creation_date">Creation date</string>
    <string name="menu_eta">ETA</string>
    <string name="menu_filter">Filter</string>
    <string name="my_notes">My notes</string>
    <string name="late">Late</string>
    <string name="months">%d months</string>
    <string name="weeks">%d weeks</string>
    <string name="today">Today</string>
    <string name="days">%d days</string>
</resources>