<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_sort"
        android:title="@string/menu_filter"
        android:icon="@drawable/sort"
        app:showAsAction="ifRoom|withText">
        <menu>
            <item
                android:id="@+id/menu_btn_creation_date"
                android:title="@string/menu_creation_date"
                />
            <item
                android:id="@+id/menu_btn_eta"
                android:title="@string/menu_eta"
                />
        </menu>
    </item>
    <item
        android:id="@+id/menu_btn_generate"
        android:title="@string/menu_generate"/>
    <item
        android:id="@+id/menu_btn_delete_all"
        android:title="@string/menu_delete_all"/>
</menu>